# rcli

./: .pre-commit-config.yaml  Cargo.toml  README.md
assets/: test.csv
src/: main.rs  opts.rs  process.rs
src/process/: gen_pass.rs
